Issue gitlab-156
Aggiunta gestione visibilità scrollbar
- Aggiunta sezione Scrollbar nel config con opzioni:
  - hidden: nasconde completamente le scrollbar
  - hideOnIdle: mostra scrollbar solo al passaggio del mouse
- Creato file app-scrollbar.scss con stili personalizzati per scrollbar
- Implementata logica in GpLayoutComponent per gestire le opzioni

--- a/frontend/angular/styles/app-custom.scss
+++ b/frontend/angular/styles/app-custom.scss
@@ -70,58 +70,6 @@ input {
   white-space: pre;
 }
 
-// scrollbar
-
-.content-scroller {
-  overflow: scroll;
-
-  &:hover {
-    &::-webkit-scrollbar-thumb {
-      visibility: visible;
-    }
-  }
-}
-
-.container-scroller {
-  /* Hide scrollbar for IE, Edge and Firefox */
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-
-  /* Hide scrollbar for Chrome, Safari and Opera */
-  &::-webkit-scrollbar {
-    display: none;
-  }
-}
-
-@media only screen and (min-width: 800px) {
-  ::-webkit-scrollbar-track {
-    background: transparent;
-  }
-
-  ::-webkit-scrollbar-thumb {
-    border-radius: 8px;
-    border: solid 2px #fff;
-    background: #bcbab7;
-    min-height: 40px;
-    visibility: hidden;
-  }
-
-  // ::-webkit-scrollbar {
-  //   // width: 10px;
-  //   // height: 12px;
-  // }
-}
-
-.content-scroller {
-  overflow: scroll;
-
-  &:hover {
-    &::-webkit-scrollbar-thumb {
-      visibility: visible;
-    }
-  }
-}
-
 .custom-sticky-top {
   position: sticky;
   top: 0;
